# algobox-v1--C

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
include/: algo.h
src/: main.c  mathx.c  search.c  sort.c
tests/: test_math.c  test_search.c  test_sort.c
